--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -11,8 +11,7 @@ div,th,td{word-wrap:break-word;word-break:break-all}
 body,button,input,select,textarea{font:14px/1.5 Arial,Helvetica,sans-serif}
 body{-webkit-user-select:none;-webkit-tap-highlight-color:rgba(0,0,0,0);}
 /*通用样式*/
-a{color:#333;text-decoration:none}
-a:focus{color:#333}
+a{text-decoration:none}
 :focus{outline:none}
 .al{text-align:left}.ac{text-align:center}.ar{text-align:right}
 .fl{float:left}.fr{float:right}.ti{text-indent:-9999px;overflow:hidden}
